# financial_insight_agent

./: .gitignore  README.md  langgraph.json  pyproject.toml  pytest.ini  requirements.txt
.roo/: mcp.json
docs/query_specs/: README.md  aggregate_query.md  alert_query.md  company_query.md  comparison_query.md  financial_ratio_query.md  forecast_query.md  indicator_query.md  news_sentiment_query.md  portfolio_query.md  price_query.md  ranking_query.md  sector_query.md
src/: __init__.py
src/api_clients/: vn_stock_client.py
src/application/: __init__.py
src/application/agent/: __init__.py  agent.py  enhanced_agent.py  enhanced_tool_registry.py  hybrid_splitter.py  tool_registry.py
src/application/agents/: __init__.py  agent.py  hybrid_splitter.py  response_formatter.py  tool_registry.py  tool_router.py
src/application/handler/: __init__.py  query_router.py  result_formatter.py
src/application/services/: __init__.py
src/application/services/company/: __init__.py  company_service.py
src/application/services/financial/: __init__.py  aggregate_service.py  financial_ratio_service.py  ranking_service.py
src/application/services/market/: __init__.py  alert_service.py  compare_service.py  forecast_service.py  indicator_service.py  price_service.py  sector_service.py
src/application/services/portfolio/: __init__.py  news_sentiment_service.py  portfolio_service.py
src/data/: indicators.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  extended_query_type.py  extended_requested_field.py  historical_query.py  query_type.py  query_types.py  requested_field.py  requested_fields.py
src/domain/schemas/: __init__.py  aggregate.py  alert.py  company.py  comparison.py  financial_ratio.py  forecast.py  indicator.py  news_sentiment.py  portfolio.py  price.py  ranking.py  sector.py
src/domain/services/: __init__.py  aggregate_service.py  company_service.py  compare_service.py  comparison_service.py  indicator_service.py  price_service.py  ranking_service.py
src/domain/services/base/: __init__.py  time_processor.py
src/domain/services/company/: company_service.py
src/domain/services/financial/: __init__.py  aggregate_service.py  financial_ratio_service.py  ranking_service.py
src/domain/services/market/: __init__.py  compare_service.py  indicator_service.py  price_service.py
src/domain/services/portfolio/: __init__.py  news_sentiment_service.py  portfolio_service.py
src/infrastructure/: __init__.py  dependencies.py
src/infrastructure/api_clients/: __init__.py  vn_stock_client.py
src/infrastructure/cache/: __init__.py  cache_keys.py  cache_manager.py  config.py  memory_cache.py  redis_cache.py  serialization.py  session_manager.py
src/infrastructure/guardrails/: __init__.py  base.py  config.py  content_filter.py  pipeline.py  query_validator.py  rate_limiter.py  tickers.py  type_validators.py
src/infrastructure/llm/: __init__.py  intent_classifier.py  llm_provider.py  nlp_parser.py  query_preprocessor.py  two_phase_parser.py
src/infrastructure/llm/extractors/: __init__.py  aggregate_extractor.py  alert_extractor.py  company_extractor.py  price_extractor.py  (+8 more)
src/infrastructure/memory/: __init__.py  memory_manager.py
src/infrastructure/observability/: __init__.py
src/infrastructure/resilience/: circuit_breaker.py  guardrails.py
src/interfaces/: __init__.py
src/interfaces/api/: app.py
src/interfaces/cli/: __init__.py  console.py
src/interfaces/http/: __init__.py
src/llm_tools/: nlp_parser.py  tools.py
src/models/: historical_query.py  intent.py  interval.py  query_type.py
src/server/: agent.py  app.py
src/shared/: __init__.py
src/shared/utils/: __init__.py  calculations.py  time_processor.py
src/tests/: __init__.py  test_query_parser.py
src/tests/data/: Test questions.xlsx
src/tests/integration/: __init__.py  test_agent_e2e.py  test_api_endpoints.py  test_enhanced_agent.py  test_full_system.py
src/tests/spec_drift/: test_schema_validation.py  test_type_validators.py
src/tests/unit/: __init__.py  test_enhanced_agent.py  test_enhanced_parser.py  test_financial_services.py  test_guardrails.py  test_market_services.py  test_portfolio_services.py  test_query_parser.py  test_query_parser_comprehensive.py  test_query_parser_simple.py  test_query_preprocessor.py  test_query_router.py  test_questions.py  test_redis_optimization.py  test_result_formatter.py  test_streaming.py  test_time_processor.py  test_two_phase_parser.py  test_vn_stock_client.py
(+6 files in other folders)
